// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion New collapses 1`] = `
<div
  className="sc-cdaca-d iHoTdA"
  size="medium"
>
  <div
    className="sc-jBqsNv djfGOe"
    size="medium"
  >
    <h3
      className="sc-hdFWlR jMRgth"
      onClick={[Function]}
    >
      Test accordion
    </h3>
    <button
      className="sc-eZuMGc dqtFyF"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="sc-uVWWZ bMdASy"
        fill="none"
        fontSize="2rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 20.5l9-9 9 9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
  </div>
  <div
    className="sc-biptUy gbHEZk"
    size="medium"
  >
    <div
      className="sc-idnGQK ctdSCt"
      size="medium"
    >
      <div>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion New expands 1`] = `
<div
  className="sc-cdaca-d iHoTdA"
  size="medium"
>
  <div
    className="sc-jBqsNv djfGOe"
    size="medium"
  >
    <h3
      className="sc-hdFWlR jMRgth"
      onClick={[Function]}
    >
      Test accordion
    </h3>
    <button
      className="sc-eZuMGc dqtFyF"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="sc-fXSgeo cOllCr"
        fill="none"
        fontSize="2rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M25 11.5l-9 9-9-9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
  </div>
  <div
    className="sc-biptUy cTOrCd"
    size="medium"
  >
    <div
      className="sc-idnGQK ctdSCt"
      size="medium"
    >
      <div>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion New renders 1`] = `
<div
  className="sc-cdaca-d iHoTdA"
  size="medium"
>
  <div
    className="sc-jBqsNv djfGOe"
    size="medium"
  >
    <h3
      className="sc-hdFWlR jMRgth"
      onClick={[Function]}
    >
      Test accordion
    </h3>
    <button
      className="sc-eZuMGc dqtFyF"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="sc-uVWWZ bMdASy"
        fill="none"
        fontSize="2rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 20.5l9-9 9 9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
  </div>
  <div
    className="sc-biptUy gbHEZk"
    size="medium"
  >
    <div
      className="sc-idnGQK ctdSCt"
      size="medium"
    >
      <div>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion New renders RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="sc-cdaca-d iHoTdA"
    size="medium"
  >
    <div
      className="sc-jBqsNv djfGOe"
      size="medium"
    >
      <h3
        className="sc-hdFWlR jMRgth"
        onClick={[Function]}
      >
        Test accordion
      </h3>
      <button
        className="sc-eZuMGc dqtFyF"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="sc-uVWWZ bMdASy"
          fill="none"
          fontSize="2rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 20.5l9-9 9 9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-biptUy gbHEZk"
      size="medium"
    >
      <div
        className="sc-idnGQK ctdSCt"
        size="medium"
      >
        <div>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion New renders content outside 1`] = `
<div
  className="sc-cdaca-d gUvEfE"
  size="medium"
>
  <div
    className="sc-jBqsNv jyAOLd"
    size="medium"
  >
    <h3
      className="sc-hdFWlR jMRgth"
      onClick={[Function]}
    >
      Test accordion
    </h3>
    <button
      className="sc-eZuMGc dqtFyF"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="sc-uVWWZ bMdASy"
        fill="none"
        fontSize="2rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 20.5l9-9 9 9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
  </div>
  <div
    className="sc-biptUy gbHEZk"
    size="medium"
  >
    <div
      className="sc-idnGQK ctdSCt"
      size="medium"
    >
      <div>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion New renders disable open 1`] = `
<div
  className="sc-cdaca-d iHoTdA"
  size="medium"
>
  <div
    className="sc-jBqsNv djfGOe"
    size="medium"
  >
    <h3
      className="sc-hdFWlR jMRgth"
      onClick={[Function]}
    >
      Test accordion
    </h3>
    <button
      className="sc-eZuMGc jWbCjG"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="sc-uVWWZ bMdASy"
        fill="none"
        fontSize="2rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 20.5l9-9 9 9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
  </div>
  <div
    className="sc-biptUy gbHEZk"
    size="medium"
  >
    <div
      className="sc-idnGQK ctdSCt"
      size="medium"
    >
      <div>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion New renders header content 1`] = `
<div
  className="sc-cdaca-d iHoTdA"
  size="medium"
>
  <div
    className="sc-jBqsNv djfGOe"
    size="medium"
  >
    <h3
      className="sc-hdFWlR jMRgth"
      onClick={[Function]}
    >
      Test accordion
    </h3>
    <div
      className="flex"
    >
      <svg
        className="sc-kOPcWz"
        fill="none"
        fontSize="2rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.833 13.889h6.334m-6.334 4.222H16m-.03 7.389c-5.247 0-9.47-4.328-9.47-9.548S10.753 6.5 16 6.5s9.5 4.232 9.5 9.452c0 1.932-.583 3.73-1.583 5.227L25.5 25.5h-9.53z"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
      <svg
        className="sc-cWSHoV"
        fill="none"
        fontSize="2rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 23.538V10.5a4 4 0 014-4h10a4 4 0 014 4v7.482a4 4 0 01-4 4h-9.154l-3.258 2.365A1 1 0 017 23.538z"
          stroke="currentColor"
        />
      </svg>
      <svg
        className="sc-eBMEME"
        fill="none"
        fontSize="2rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13 14.5h6m-3-3v6m-9-7v13.038a1 1 0 001.588.81l3.258-2.366H21a4 4 0 004-4V10.5a4 4 0 00-4-4H11a4 4 0 00-4 4z"
          stroke="currentColor"
          strokeLinecap="round"
        />
      </svg>
      <svg
        className="sc-tagGq"
        fill="none"
        fontSize="2rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.5 13.634V10.5a4 4 0 014-4h7.894a2.834 2.834 0 110 5.667h-8.387L8.27 14.271c-.596.723-1.771.3-1.771-.637zM24.5 23.068v-2.777a4 4 0 00-4-4h-7.894a2.834 2.834 0 000 5.667h8.388l1.795 1.814c.629.635 1.711.19 1.711-.704z"
          stroke="currentColor"
        />
      </svg>
    </div>
    <button
      className="sc-eZuMGc dqtFyF"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="sc-uVWWZ bMdASy"
        fill="none"
        fontSize="2rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 20.5l9-9 9 9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
  </div>
  <div
    className="sc-biptUy gbHEZk"
    size="medium"
  >
    <div
      className="sc-idnGQK ctdSCt"
      size="medium"
    >
      <div>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion New renders open by default 1`] = `
<div
  className="sc-cdaca-d iHoTdA"
  size="medium"
>
  <div
    className="sc-jBqsNv djfGOe"
    size="medium"
  >
    <h3
      className="sc-hdFWlR jMRgth"
      onClick={[Function]}
    >
      Test accordion
    </h3>
    <button
      className="sc-eZuMGc dqtFyF"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="sc-fXSgeo cOllCr"
        fill="none"
        fontSize="2rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M25 11.5l-9 9-9-9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
  </div>
  <div
    className="sc-biptUy cTOrCd"
    size="medium"
  >
    <div
      className="sc-idnGQK ctdSCt"
      size="medium"
    >
      <div>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion New renders sizes variants 1`] = `
Array [
  <div
    className="sc-cdaca-d iQtefy"
    size="xlarge"
  >
    <div
      className="sc-jBqsNv heQqUM"
      size="xlarge"
    >
      <h3
        className="sc-hdFWlR jMRgth"
        onClick={[Function]}
      >
        X Large (Default)
      </h3>
      <button
        className="sc-eZuMGc dqtFyF"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="sc-uVWWZ bMdASy"
          fill="none"
          fontSize="2rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 20.5l9-9 9 9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-biptUy gbHEZk"
      size="xlarge"
    >
      <div
        className="sc-idnGQK enKNQH"
        size="xlarge"
      >
        <div>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-cdaca-d fbgPOb"
    size="large"
  >
    <div
      className="sc-jBqsNv exlQdG"
      size="large"
    >
      <h3
        className="sc-hdFWlR jMRgth"
        onClick={[Function]}
      >
        Large
      </h3>
      <button
        className="sc-eZuMGc dqtFyF"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="sc-uVWWZ bMdASy"
          fill="none"
          fontSize="2rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 20.5l9-9 9 9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-biptUy gbHEZk"
      size="large"
    >
      <div
        className="sc-idnGQK kbmuOu"
        size="large"
      >
        <div>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-cdaca-d iHoTdA"
    size="medium"
  >
    <div
      className="sc-jBqsNv djfGOe"
      size="medium"
    >
      <h3
        className="sc-hdFWlR jMRgth"
        onClick={[Function]}
      >
        Medium
      </h3>
      <button
        className="sc-eZuMGc dqtFyF"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="sc-uVWWZ bMdASy"
          fill="none"
          fontSize="2rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 20.5l9-9 9 9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-biptUy gbHEZk"
      size="medium"
    >
      <div
        className="sc-idnGQK ctdSCt"
        size="medium"
      >
        <div>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-cdaca-d fdEQEC"
    size="small"
  >
    <div
      className="sc-jBqsNv drWrsZ"
      size="small"
    >
      <h3
        className="sc-hdFWlR jMRgth"
        onClick={[Function]}
      >
        Small
      </h3>
      <button
        className="sc-eZuMGc dqtFyF"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="sc-uVWWZ bMdASy"
          fill="none"
          fontSize="2rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 20.5l9-9 9 9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-biptUy gbHEZk"
      size="small"
    >
      <div
        className="sc-idnGQK kUiiqX"
        size="small"
      >
        <div>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Accordion New renders sizes variants with content outside 1`] = `
Array [
  <div
    className="sc-cdaca-d gUvEfE"
    size="xlarge"
  >
    <div
      className="sc-jBqsNv dNXtPI"
      size="xlarge"
    >
      <h3
        className="sc-hdFWlR jMRgth"
        onClick={[Function]}
      >
        X Large (Default)
      </h3>
      <button
        className="sc-eZuMGc dqtFyF"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="sc-uVWWZ bMdASy"
          fill="none"
          fontSize="2rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 20.5l9-9 9 9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-biptUy gbHEZk"
      size="xlarge"
    >
      <div
        className="sc-idnGQK enKNQH"
        size="xlarge"
      >
        <div>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-cdaca-d gUvEfE"
    size="large"
  >
    <div
      className="sc-jBqsNv eoKdyI"
      size="large"
    >
      <h3
        className="sc-hdFWlR jMRgth"
        onClick={[Function]}
      >
        Large
      </h3>
      <button
        className="sc-eZuMGc dqtFyF"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="sc-uVWWZ bMdASy"
          fill="none"
          fontSize="2rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 20.5l9-9 9 9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-biptUy gbHEZk"
      size="large"
    >
      <div
        className="sc-idnGQK kbmuOu"
        size="large"
      >
        <div>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-cdaca-d gUvEfE"
    size="medium"
  >
    <div
      className="sc-jBqsNv jyAOLd"
      size="medium"
    >
      <h3
        className="sc-hdFWlR jMRgth"
        onClick={[Function]}
      >
        Medium
      </h3>
      <button
        className="sc-eZuMGc dqtFyF"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="sc-uVWWZ bMdASy"
          fill="none"
          fontSize="2rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 20.5l9-9 9 9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-biptUy gbHEZk"
      size="medium"
    >
      <div
        className="sc-idnGQK ctdSCt"
        size="medium"
      >
        <div>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-cdaca-d gUvEfE"
    size="small"
  >
    <div
      className="sc-jBqsNv kVETXD"
      size="small"
    >
      <h3
        className="sc-hdFWlR jMRgth"
        onClick={[Function]}
      >
        Small
      </h3>
      <button
        className="sc-eZuMGc dqtFyF"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="sc-uVWWZ bMdASy"
          fill="none"
          fontSize="2rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 20.5l9-9 9 9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-biptUy gbHEZk"
      size="small"
    >
      <div
        className="sc-idnGQK kUiiqX"
        size="small"
      >
        <div>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Accordion New renders without button 1`] = `
<div
  className="sc-cdaca-d iHoTdA"
  size="medium"
>
  <div
    className="sc-jBqsNv djfGOe"
    size="medium"
  >
    <h3
      className="sc-hdFWlR jMRgth"
      onClick={[Function]}
    >
      Test accordion
    </h3>
  </div>
  <div
    className="sc-biptUy gbHEZk"
    size="medium"
  >
    <div
      className="sc-idnGQK ctdSCt"
      size="medium"
    >
      <div>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>
</div>
`;
